--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
 
 # vercel
 .vercel
@@ -39,5 +39,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/prisma
+/prisma/migrations
+/prisma/schema.prisma
 /public/img
