update env example

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@
 
 DATABASE_URL="postgresql://yourusername:yourpassword@localhost:5432/yourdatabase?schema=public"
 REFRESH_TOKEN_SECRET=
+ACCESS_TOKEN_SECRET=
 NEXT_PUBLIC_ACCESS_TOKEN_SECRET=
 NODE_ENV=development
 NEXT_PUBLIC_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3001
+NEXTAUTH_SECRET=
